# mortty

./: .gitignore  Cargo.toml  Info.plist  Makefile  README.md  config.toml.template
src/: bg_shader.wgsl  config.rs  main.rs  pty.rs  renderer.rs  terminal.rs  window.rs
