[package]
name = "mortty"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "22.1"
env_logger = "0.11"
log = "0.4"
pollster = "0.3"
portable-pty = "0.8"
anyhow = "1.0"
vte = "0.11"
glyphon = "0.6"
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "6.0"
dirs = "6.0"
